--- a/reconnect.tex
+++ b/reconnect.tex
@@ -19,7 +19,7 @@
 \begin{document}
 \maketitle
 
-\begin{frame}{Topics}{abc}
+\begin{frame}{Topics}
   \begin{itemize}
     \item Technical background of Arbor's connectivity.
     \item Structural Plasticity in Arbor.
